fix: fix messages were overflowing

--- a/src/components/Chat/_chat.scss
+++ b/src/components/Chat/_chat.scss
@@ -5,6 +5,7 @@
   width: 100vw;
   height: 100vh;
   transition: all 2s;
+  max-width: calc(100% - 320px);
   .chat-wrapper {
     display: flex;
     width: 100%;
